<resources>
    <string name="app_name">IoTMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="api_key">API Key</string>
    <string name="channel_id">Channel ID</string>
    <string name="search">Search</string>
    <string name="appwidget_text">LOADING...</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_select_channel">SelectChannelActivity</string>
    <string name="channel">Channel</string>
    <string name="min_value">Minimum value alarm</string>
    <string name="max_value">Maximum value alarm</string>
    <string name="widget_cancel_menu_cancel_title">cancel</string>
    <string name="widget_config_menu_confirm_title">confirm</string>
    <string name="set_triggers">Set triggers</string>
    <string name="refresh_time">Refresh time</string>
    <string name="field">Field</string>
    <string name="time_range_hour">hour</string>
    <string name="time_range_day">day</string>
    <string name="time_range_week">week</string>
    <string name="time_range_month">month</string>
    <string name="compare">compare</string>
    <string name="last_request_time">last request time</string>
    <string name="alarm_snooze">snooze 10 min</string>
    <string name="label_yes">Yes</string>
    <string name="label_cancel">Cancel</string>
    <string name="title_activity_configure_widget">Configure</string>
    <string name="info_channel_list_is_empty">Channel list is empty</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="tab_text_1">All Channels</string>
    <string name="tab_text_2">Single Channel</string>
    <string name="user_api_key">User API Key</string>
    <string name="isPrivate">Private</string>
    <string name="background_color">Background color</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hour">HOUR</string>
    <string name="day">DAY</string>
    <string name="week">WEEK</string>
    <string name="month">MONTH</string>
    <string name="triggers">Triggers</string>
    <string name="last_entry">Last entry:</string>
    <string name="field_settings_min_max_warning">Max value can\'t be lower than min value.</string>
    <string name="field_settings_positive_button">Set</string>
    <string name="field_settings_negative_button">Cancel</string>
    <string name="confirm_field_deleting">Are you sure you want to delete this field?</string>
</resources>
