<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewmodel"
            type="com.example.wojciech.iotmonitor.features.adding.viewmodel.TabSingleChannelFragmentViewModel" />
        <import type="android.view.View" />
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/channelIdManual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/channel_id"
                android:inputType="numberDecimal"
                android:text="" />

            <CheckBox
                android:id="@+id/checkboxPrivateManual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/isPrivate" />

            <EditText
                android:id="@+id/apiKeyManual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/api_key"
                android:inputType="textPersonName"
                android:text=""
                android:visibility="@{viewmodel.isPrivateLiveData ? View.VISIBLE : View.GONE}"/>

            <Button
                android:id="@+id/searchButtonManual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/search" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>
