<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        tools:context="com.example.wojciech.iotmonitor.activities.AddChannelActivity">

        <EditText
            android:id="@+id/channelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/channel_id"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/apiKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/api_key"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:onClick="searchChannel"
            android:text="@string/search" />
    </LinearLayout>
</layout>