<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--<data>-->

    <!--<variable-->
    <!--name="channelSettings"-->
    <!--type="com.example.wojciech.iotmonitor.model.thingspeak.ChannelSettings" />-->
    <!--</data>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/w_conf_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            tools:context="com.example.wojciech.iotmonitor.widget.WidgetConfigureActivity">

            <android.support.v7.widget.Toolbar
                android:id="@+id/w_conf_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>

            <android.support.v7.widget.CardView
                android:id="@+id/w_conf_channels_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/channel"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_h2" />

                    <Spinner
                        android:id="@+id/w_conf_channels_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </Spinner>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/w_conf_fields_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_dark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/field"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_h2" />

                    <Spinner
                        android:id="@+id/w_conf_fields_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </Spinner>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/set_triggers"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_h2" />

                <CheckBox
                    android:id="@+id/w_conf_min_trigger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/min_value" />

                <EditText
                    android:id="@+id/w_conf_min_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <CheckBox
                    android:id="@+id/w_conf_max_trigger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max_value" />

                <EditText
                    android:id="@+id/w_conf_max_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding"
                    android:text="@string/refresh_time"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_h2" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/w_conf_refresh_time_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="10min" />

                    <SeekBar
                        android:id="@+id/w_conf_refresh_time_seekbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:max="59" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/background_color" />

                <Button
                    android:id="@+id/set_color_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setColor" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
